--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <link rel="stylesheet" href="test.css">
-    <title></title>
+    <title>Doomsday</title>
   </head>
   <body style="margin: 0">
+    <div style="background-color: white; margin: 0; height: 100%; width: 100%">
     <div class="header">
     <p class="title">DOOMSDAY</P>
     </div>
@@ -74,5 +75,6 @@
       }
     </script>
     <div class="resetBtn" onclick="resetDate()">Ny dato</div>
+   </div>
   </body>
 </html>
