--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Doomsday</title>
   </head>
   <body style="margin: 0">
-    <div style="background-color: white; margin: 0; height: 100%; width: 100%">
+    <div style="background-color: #212121; margin: 0; height: 100%; width: 100%">
     <div class="header">
     <p class="title">DOOMSDAY</P>
     </div>
